syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";


message WeeklyBossResinDiscountInfo {
	uint32 discount_num = 1;
	uint32 discount_num_limit = 2;
	uint32 resin_cost = 3;
	uint32 original_resin_cost = 4;
}
